--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,7 +112,10 @@ single node codecov:
   image: $CI_REGISTRY_IMAGE/codecov/deploy:$CI_COMMIT_SHA
   stage: test
   resource_group: daint-job
-  script: codecov_run bash -c "unit && unit-local && unit-modcc"
+  script:
+    - codecov_run unit
+    - codecov_run unit-local
+    - codecov_run unit-modcc
   variables:
     SLURM_JOB_NUM_NODES: 1
     SLURM_NTASKS: 1
