Add place_pwlin for morphology geometry queries.
* Add new `isometry` class representing a direct Euclidean isometry
comprising a rotation and translation. Translations are always taken
with respect to absolute coordinates, but rotations are composed with
respect to intrinsic coordinates.
* Add new `place_pwlin` class, that takes a morphology and an isometry,
and answers location queries: where in space does a particular mlocation
lie?
* Split out (some of) the common code between `place_pwlin` and
`embed_pwlin`.
* Add equality operator to `mpoint`.

--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -36,6 +36,7 @@ set(arbor_sources
     morph/morphexcept.cpp
     morph/morphology.cpp
     morph/mprovider.cpp
+    morph/place_pwlin.cpp
     morph/primitives.cpp
     morph/region.cpp
     morph/sample_tree.cpp
