--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -117,7 +117,7 @@ set(unit_sources
     test_mechinfo.cpp
     test_merge_events.cpp
     test_merge_view.cpp
-    #test_morphology.cpp
+    test_morphology.cpp
     #test_morph_embedding.cpp
     #test_morph_expr.cpp
     test_morph_primitives.cpp
