unit tests work

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -65,7 +65,7 @@ endforeach()
 # set(proto_mechanisms pas hh expsyn exp2syn test_kin1 test_kinlva test_ca)
 # set(mech_proto_dir "${CMAKE_CURRENT_BINARY_DIR}/mech_proto")
 # file(MAKE_DIRECTORY "${mech_proto_dir}")
-# 
+#
 # build_modules(
 #     ${proto_mechanisms}
 #     SOURCE_DIR "${PROJECT_SOURCE_DIR}/mechanisms/mod"
@@ -87,18 +87,18 @@ set(unit_sources
     test_counter.cpp
     test_cv_geom.cpp
     test_cv_layout.cpp
-    #test_cv_policy.cpp
+    test_cv_policy.cpp
     test_cycle.cpp
     test_domain_decomposition.cpp
     test_dry_run_context.cpp
     test_double_buffer.cpp
     test_either.cpp
     test_event_binner.cpp
-    #test_event_delivery.cpp
+    test_event_delivery.cpp
     test_event_generators.cpp
     test_event_queue.cpp
     test_filter.cpp
-    #test_fvm_layout.cpp
+    test_fvm_layout.cpp
     test_fvm_lowered.cpp
     test_glob_basic.cpp
     test_kinetic_linear.cpp
@@ -118,8 +118,8 @@ set(unit_sources
     test_merge_events.cpp
     test_merge_view.cpp
     test_morphology.cpp
-    #test_morph_embedding.cpp
-    #test_morph_expr.cpp
+    test_morph_embedding.cpp
+    test_morph_expr.cpp
     test_morph_primitives.cpp
     test_multi_event_stream.cpp
     test_optional.cpp
@@ -130,7 +130,7 @@ set(unit_sources
     test_piecewise.cpp
     test_point.cpp
     test_pp_util.cpp
-    #test_probe.cpp
+    test_probe.cpp
     test_range.cpp
     test_ratelem.cpp
     test_schedule.cpp
