--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -126,8 +126,10 @@ set(unit_sources
     test_morph_expr.cpp
     test_morph_place.cpp
     test_morph_primitives.cpp
+    test_morph_stitch.cpp
     test_multi_event_stream.cpp
     test_optional.cpp
+    test_ordered_forest.cpp
     test_padded.cpp
     test_partition.cpp
     test_partition_by_constraint.cpp
