Updated all in-repo references and scripts to Python 3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -132,7 +132,7 @@ install:
     if [[ "$WITH_PYTHON" == "true" ]]; then
       curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
       python$PY get-pip.py
-      pip --version
+      pip$PY --version
     fi
   - if [[ ( "$WITH_PYTHON" == "true" ) && ( "$TRAVIS_OS_NAME" == "osx" ) ]]; then pip$PY install numpy; fi
   - |
