--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -27,6 +27,7 @@ set(pyarb_source
     morphology.cpp
     morph_parse.cpp
     mpi.cpp
+    param_loader.cpp
     profiler.cpp
     pyarb.cpp
     recipe.cpp
