add bbp catalogue

--- a/mechanisms/CMakeLists.txt
+++ b/mechanisms/CMakeLists.txt
@@ -10,6 +10,46 @@ add_custom_target(build_all_mods)
 set(mech_sources "")
 
 # ALLEN
+set(bbp_mechanisms CaDynamics_E2 Ca_HVA Ca_LVAst Ih Im K_Pst K_Tst Nap_Et2 NaTa_t NaTs2_t SK_E2 SKv3_1)
+set(bbp_mod_srcdir "${CMAKE_CURRENT_SOURCE_DIR}/bbp")
+set(mech_dir "${CMAKE_CURRENT_BINARY_DIR}/generated/bbp")
+file(MAKE_DIRECTORY "${mech_dir}")
+
+build_modules(
+        ${bbp_mechanisms}
+        SOURCE_DIR "${bbp_mod_srcdir}"
+        DEST_DIR "${mech_dir}"
+        ${external_modcc}
+        MODCC_FLAGS -t cpu -t gpu ${ARB_MODCC_FLAGS}
+        GENERATES .hpp _cpu.cpp _gpu.cpp _gpu.cu
+        TARGET build_catalogue_bbp_mods)
+
+set(bbp_catalogue_source ${CMAKE_CURRENT_BINARY_DIR}/bbp_catalogue.cpp)
+set(bbp_catalogue_options -A arbor -I ${mech_dir} -o ${bbp_catalogue_source} -B multicore -C bbp)
+if(ARB_WITH_GPU)
+    list(APPEND bbp_catalogue_options -B gpu)
+endif()
+
+add_custom_command(
+        OUTPUT ${bbp_catalogue_source}
+        COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/generate_catalogue ${bbp_catalogue_options} ${bbp_mechanisms}
+        DEPENDS generate_catalogue
+)
+
+add_custom_target(bbp_catalogue_cpp_target DEPENDS ${bbp_catalogue_source})
+add_dependencies(build_catalogue_bbp_mods bbp_catalogue_cpp_target)
+add_dependencies(build_all_mods build_catalogue_bbp_mods)
+
+list(APPEND mech_sources ${bbp_catalogue_source})
+foreach(mech ${bbp_mechanisms})
+    list(APPEND mech_sources ${mech_dir}/${mech}_cpu.cpp)
+    if(ARB_WITH_GPU)
+        list(APPEND mech_sources ${mech_dir}/${mech}_gpu.cpp)
+        list(APPEND mech_sources ${mech_dir}/${mech}_gpu.cu)
+    endif()
+endforeach()
+
+# ALLEN
 set(allen_mechanisms CaDynamics Ca_HVA Ca_LVA Ih Im Im_v2 K_P K_T Kd Kv2like Kv3_1 NaTa NaTs NaV Nap SK)
 set(allen_mod_srcdir "${CMAKE_CURRENT_SOURCE_DIR}/allen")
 set(mech_dir "${CMAKE_CURRENT_BINARY_DIR}/generated/allen")
