--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -174,18 +174,17 @@ set(unit_sources
 
 if(ARB_WITH_GPU)
     list(APPEND unit_sources
-
         test_intrin.cu
         test_gpu_stack.cu
-        test_matrix.cu
-        test_matrix_cpuvsgpu.cpp
+        test_multi_event_stream_gpu.cu
         test_reduce_by_key.cu
-        test_vector.cu
 
+        test_matrix_cpuvsgpu.cpp
+        test_matrix_gpu.cpp
         test_mc_cell_group_gpu.cpp
         test_multi_event_stream_gpu.cpp
-        test_multi_event_stream_gpu.cu
         test_spikes_gpu.cpp
+        test_vector_gpu.cpp
     )
 endif()
 
