--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -152,6 +152,7 @@ set(unit_sources
     test_strprintf.cpp
     test_swcio.cpp
     test_synapses.cpp
+    test_s_expr.cpp
     test_thread.cpp
     test_threading_exceptions.cpp
     test_tree.cpp
