--- a/.travis.yml
+++ b/.travis.yml
@@ -16,45 +16,45 @@ matrix:
 ## test gcc8 - single node/rank with threading backend ##
   - name: "osx, gcc, serial, py"
     os: osx
-    osx_image: xcode11.3
+    osx_image: xcode12
     python: 3.6
     env:
       - MATRIX_EVAL="brew install gcc@8 && brew link --force --overwrite gcc@8 && brew install cmake && CC=gcc-8 && CXX=g++-8"
       - BUILD_NAME=cthread-osx-gcc-py
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=true ARCH=native
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
     compiler: gcc-8
 
 ## test gcc8 - mpi with threading backend ##
   - name: "osx, gcc, mpi, py"
     os: osx
-    osx_image: xcode11.3
+    osx_image: xcode12
     python: 3.6
     env:
       - MATRIX_EVAL="brew install gcc@8 && brew link --force --overwrite gcc@8 && brew install cmake && CC=gcc-8 && CXX=g++-8"
       - BUILD_NAME=mpi-osx-gcc-py
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=true ARCH=native
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
     compiler: gcc-8
 
 ## test clang9 - single node/rank with threading backend ##
   - name: "osx, apple clang, serial, py"
     os: osx
-    osx_image: xcode11.3
+    osx_image: xcode12
     python: 3.6
     env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
       - BUILD_NAME=cthread-osx-clang-py
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=true ARCH=native
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
     compiler: clang
 
 ## test clang9 - mpi with threading backend ##
   - name: "osx, apple clang, mpi, py"
     os: osx
-    osx_image: xcode11.3
+    osx_image: xcode12
     python: 3.6
     env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
       - BUILD_NAME=mpi-osx-clang
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=true ARCH=native
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
     compiler: clang
 
 ######################### LINUX #########################
@@ -73,7 +73,7 @@ matrix:
     env:
       - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
       - BUILD_NAME=cthread-linux-gcc-py
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=true ARCH=haswell
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=haswell
     compiler: gcc-8
 
 ## test gcc8 - mpi with threading backend ##
@@ -91,10 +91,11 @@ matrix:
     env:
       - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
       - BUILD_NAME=mpi-linux-gcc-py
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=true ARCH=haswell
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=haswell
     compiler: gcc-8
 
 ## test clang8 - single node/rank with threading backend ##
+# Note: need g++8 for C++17 stdlib.
   - name: "linux, clang, serial, py"
     os: linux
     dist: bionic
@@ -102,6 +103,7 @@ matrix:
       apt:
         sources:
         packages:
+          - g++-8
           - clang-8
           - openmpi-bin
           - libopenmpi-dev
@@ -109,10 +111,11 @@ matrix:
     env:
       - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
       - BUILD_NAME=cthread-linux-clang-py
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=true ARCH=native
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
     compiler: clang-8.0
 
 ## test clang8 - mpi with threading backend ##
+# Note: need g++8 for C++17 stdlib.
   - name: "linux, clang, mpi, py"
     os: linux
     dist: bionic
@@ -120,6 +123,7 @@ matrix:
       apt:
         sources:
         packages:
+          - g++-8
           - clang-8
           - openmpi-bin
           - libopenmpi-dev
@@ -127,7 +131,7 @@ matrix:
     env:
       - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
       - BUILD_NAME=mpi-linux-clang-py
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=true ARCH=native
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
     compiler: clang-8.0
 
 before_install:
