--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 ######## Testing minimal compiler requirements ########
 # GCC          8.1.0
-# Clang        7.0
+# Clang        8.0
 # Apple Clang  1100.0.33.16
 #######################################################
 
@@ -16,45 +16,45 @@ matrix:
 ## test gcc8 - single node/rank with threading backend ##
   - name: "osx, gcc, serial, py"
     os: osx
-    osx_image: xcode11.3
+    osx_image: xcode12
     python: 3.6
     env:
       - MATRIX_EVAL="brew install gcc@8 && brew link --force --overwrite gcc@8 && brew install cmake && CC=gcc-8 && CXX=g++-8"
       - BUILD_NAME=cthread-osx-gcc-py
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 ARCH=native
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
     compiler: gcc-8
 
 ## test gcc8 - mpi with threading backend ##
   - name: "osx, gcc, mpi, py"
     os: osx
-    osx_image: xcode11.3
+    osx_image: xcode12
     python: 3.6
     env:
       - MATRIX_EVAL="brew install gcc@8 && brew link --force --overwrite gcc@8 && brew install cmake && CC=gcc-8 && CXX=g++-8"
       - BUILD_NAME=mpi-osx-gcc-py
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 ARCH=native
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
     compiler: gcc-8
 
 ## test clang9 - single node/rank with threading backend ##
   - name: "osx, apple clang, serial, py"
     os: osx
-    osx_image: xcode11.3
+    osx_image: xcode12
     python: 3.6
     env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
       - BUILD_NAME=cthread-osx-clang-py
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 ARCH=native
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
     compiler: clang
 
 ## test clang9 - mpi with threading backend ##
   - name: "osx, apple clang, mpi, py"
     os: osx
-    osx_image: xcode11.3
+    osx_image: xcode12
     python: 3.6
     env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
       - BUILD_NAME=mpi-osx-clang
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 ARCH=native
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
     compiler: clang
 
 ######################### LINUX #########################
@@ -69,10 +69,11 @@ matrix:
           - g++-8
           - openmpi-bin
           - libopenmpi-dev
+          - libxml2
     env:
       - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
       - BUILD_NAME=cthread-linux-gcc-py
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 ARCH=haswell
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=haswell
     compiler: gcc-8
 
 ## test gcc8 - mpi with threading backend ##
@@ -86,13 +87,15 @@ matrix:
           - g++-8
           - openmpi-bin
           - libopenmpi-dev
+          - libxml2
     env:
       - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
       - BUILD_NAME=mpi-linux-gcc-py
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 ARCH=haswell
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=haswell
     compiler: gcc-8
 
-## test clang7 - single node/rank with threading backend ##
+## test clang8 - single node/rank with threading backend ##
+# Note: need g++8 for C++17 stdlib.
   - name: "linux, clang, serial, py"
     os: linux
     dist: bionic
@@ -100,15 +103,19 @@ matrix:
       apt:
         sources:
         packages:
+          - g++-8
+          - clang-8
           - openmpi-bin
           - libopenmpi-dev
+          - libxml2
     env:
-      - MATRIX_EVAL="CC=clang && CXX=clang++"
+      - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
       - BUILD_NAME=cthread-linux-clang-py
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 ARCH=native
-    compiler: clang-7.0
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
+    compiler: clang-8.0
 
-## test clang7 - mpi with threading backend ##
+## test clang8 - mpi with threading backend ##
+# Note: need g++8 for C++17 stdlib.
   - name: "linux, clang, mpi, py"
     os: linux
     dist: bionic
@@ -116,13 +123,16 @@ matrix:
       apt:
         sources:
         packages:
+          - g++-8
+          - clang-8
           - openmpi-bin
           - libopenmpi-dev
+          - libxml2
     env:
-      - MATRIX_EVAL="CC=clang && CXX=clang++"
+      - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
       - BUILD_NAME=mpi-linux-clang-py
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 ARCH=native
-    compiler: clang-7.0
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3 WITH_NEUROML=ON ARCH=native
+    compiler: clang-8.0
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export HOMEBREW_NO_AUTO_UPDATE=1; brew cask uninstall --force oclint; fi
