Install Arbor on RTD

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,6 +3,10 @@
 
 version: 2
 
+submodules:
+  include: all
+  recursive: true
+
 sphinx:
   configuration: doc/conf.py
 
@@ -12,3 +16,5 @@ python:
   version: 3.7
   install:
     - requirements: doc/requirements.txt
+    - method: setuptools
+      path: .
