--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,12 +3,17 @@
 
 version: 2
 
+submodules:
+  include: all
+  recursive: true
+
 sphinx:
   configuration: doc/conf.py
 
-formats: all
+formats: []
 
 python:
   version: 3.7
+  system_packages: true
   install:
     - requirements: doc/requirements.txt
